--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -6,22 +6,22 @@ Vagrant.configure("2") do |config|
   end
 
   config.vm.box = "bento/debian-13"
- # config.vm.box_version = "4.3.12"
-
+  
   config.vm.define "tbouzalmS" do |server|
     server.vm.hostname = "tbouzalmS"
-    server.vm.network "private_network", ip: "192.168.56.110" # Static IP
-    server.vm.provision "shell", path: "scripts/server_script.sh"
+    server.vm.network "private_network", ip: "192.168.56.110"
     server.vm.provider "virtualbox" do |vb|
       vb.name  = "tbouzalmS"
     end
+    server.vm.provision "shell", path: "scripts/server_script.sh"
   end
+  
   config.vm.define "tbouzalmSW" do |server|
     server.vm.hostname = "tbouzalmSW"
-    server.vm.network "private_network", ip: "192.168.56.111" # Static IP
-    server.vm.provision "shell", path: "scripts/server_worker_script.sh"
+    server.vm.network "private_network", ip: "192.168.56.111"
     server.vm.provider "virtualbox" do |vb|
       vb.name  = "tbouzalmSW"
     end
+    server.vm.provision "shell", path: "scripts/server_worker_script.sh"
   end
 end
