--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -5,15 +5,16 @@ Vagrant.configure("2") do |config|
     vb.cpus = 1
   end
 
-  config.vm.box = "bento/debian-13"
-  
+  config.vm.box = "generic/alpine319"
+  config.vm.box_version = "4.3.12"
+
   config.vm.define "tbouzalmS" do |server|
     server.vm.hostname = "tbouzalmS"
     server.vm.network "private_network", ip: "192.168.56.110"
     server.vm.provider "virtualbox" do |vb|
       vb.name  = "tbouzalmS"
     end
-    server.vm.provision "shell", path: "scripts/server_script.sh"
+    server.vm.provision "shell", inline: 'curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--token 12345 -i 192.168.56.110 " sh -s - '
   end
   
   config.vm.define "tbouzalmSW" do |server|
@@ -22,6 +23,6 @@ Vagrant.configure("2") do |config|
     server.vm.provider "virtualbox" do |vb|
       vb.name  = "tbouzalmSW"
     end
-    server.vm.provision "shell", path: "scripts/server_worker_script.sh"
+    server.vm.provision "shell", inline: 'curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="agent --server https://192.168.56.110:6443 -token 12345 -i 192.168.56.111" sh -s -'
   end
 end
