--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -1,28 +1,31 @@
 Vagrant.configure("2") do |config|
+  config.env.enable # Enable vagrant-env(.env)
 
   config.vm.provider "virtualbox" do |vb|
-    vb.memory = 1024
-    vb.cpus = 1
+    vb.memory = ENV['VM_MEMORY']
+    vb.cpus = ENV['VM_CPUS']
   end
 
-  config.vm.box = "generic/alpine319"
-  config.vm.box_version = "4.3.12"
+  config.vm.box = ENV['VAGRANT_BOX']
+  config.vm.box_version = ENV['VAGRANT_BOX_VERSION']
 
-  config.vm.define "tbouzalmS" do |server|
-    server.vm.hostname = "tbouzalmS"
-    server.vm.network "private_network", ip: "192.168.56.110"
+
+  config.vm.define ENV["SERVER_NAME"] do |server|
+    server.vm.hostname = ENV["SERVER_NAME"]
     server.vm.provider "virtualbox" do |vb|
-      vb.name  = "tbouzalmS"
+      vb.name  = ENV["SERVER_NAME"]
     end
-    server.vm.provision "shell", inline: 'curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="--token 12345 -i 192.168.56.110 " sh -s - '
+    server.vm.network "private_network", ip: ENV["SERVER_IP"]
+    server.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC=' -i #{ENV["SERVER_IP"]}' sh -s - && cat /var/lib/rancher/k3s/server/token > /vagrant/token"
   end
-  
-  config.vm.define "tbouzalmSW" do |server|
-    server.vm.hostname = "tbouzalmSW"
-    server.vm.network "private_network", ip: "192.168.56.111"
+
+  config.vm.define ENV["SERVER_WORKER_NAME"] do |server|
+    server.vm.hostname = ENV["SERVER_WORKER_NAME"]
     server.vm.provider "virtualbox" do |vb|
-      vb.name  = "tbouzalmSW"
+      vb.name  = ENV["SERVER_WORKER_NAME"]
     end
-    server.vm.provision "shell", inline: 'curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC="agent --server https://192.168.56.110:6443 -token 12345 -i 192.168.56.111" sh -s -'
+    server.vm.network "private_network", ip: ENV["SERVER_WORKER_IP"]
+
+    server.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC='agent --server #{ENV["K3S_URL"]} --node-ip #{ENV["SERVER_WORKER_IP"]}' K3S_TOKEN=$(cat /vagrant/token) sh -s - "
   end
 end
