--- a/p1/Vagrantfile
+++ b/p1/Vagrantfile
@@ -16,7 +16,7 @@ Vagrant.configure("2") do |config|
       vb.name  = ENV["SERVER_NAME"]
     end
     server.vm.network "private_network", ip: ENV["SERVER_IP"]
-    server.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC=' -i #{ENV["SERVER_IP"]}' sh -s - && cat /var/lib/rancher/k3s/server/token > /vagrant/token"
+    server.vm.provision "shell", inline: "curl -sfL https://get.k3s.io | INSTALL_K3S_EXEC=' -i #{ENV["SERVER_IP"]} --write-kubeconfig-mode 644 ' sh -s - && cat /var/lib/rancher/k3s/server/token > /vagrant/token"
   end
 
   config.vm.define ENV["SERVER_WORKER_NAME"] do |server|
